# ncl

./: .gitignore  .travis.yml  AUTHORS  BSDLicense.txt  CMakeLists.txt  ChangeLog  INSTALL  Jamroot  Makefile.am  NEWS  README.md  bootstrap.sh  config.h.in  configure.ac  meson.build  swig_configure.ac  travis-build-and-test.sh
.github/workflows/: build.yml
config/: ax_cxx_flags.m4
data/: unaligned.nex
example/: Makefile.am  meson.build
example/basiccmdline/: basiccmdline.cpp  basiccmdline.h  meson.build
example/check-taxo-nodes/: Makefile.am  checktaxonnodes.cpp  meson.build
example/compressor/: Makefile.am  compressor.cpp  meson.build
example/find-unsupported-edges/: Makefile.am  findunsupportededges.cpp  meson.build
example/gapcode/: Makefile.am  gapcode.cpp  meson.build
example/nclsimplest/: meson.build  nclsimplest.cpp
example/ncltest/: Makefile.am  meson.build  ncltest.cpp  ncltest.h
example/normalizer/: Makefile.am  converter.cpp  meson.build  normalizer.cpp  normalizer.h  us2ml.cpp
example/ot-subtree/: Makefile.am  meson.build  otsubtree.cpp
example/ot-tree-inspect/: Makefile.am  meson.build  ot_tree_inspect.cpp
example/outdeg1count/: Makefile.am  meson.build  outdeg1count.cpp
example/patristic/: meson.build  patristic.cpp  test.nex
example/phylobaseinterface/: Makefile.am  NCLInterface.cpp  NCLInterface.h  meson.build
example/polytomy-count/: Makefile.am  meson.build  polytomy_count.cpp
example/splitsinfile/: Makefile.am  meson.build  splitsinfile.cpp  splitsstructs.cpp  splitsstructs.h
example/subsetter/: Makefile.am  meson.build  subsetter.cpp
example/translate/: Makefile.am  meson.build  translateNuc.cpp
html/: BASICCMDLINE.html  MyAssumptionsBlock.html  MyCharactersBlock.html  MyDataBlock.html  MyNexusFileReader.html  MyNexusToken.html  MyToken.html  NStrCaseInsensitiveEquals.html  NStrCaseSensitiveEquals.html  NxsAssumptionsBlock.html  NxsBlock.html  NxsCharactersBlock.html  NxsDataBlock.html  NxsDiscreteDatum.html  NxsDiscreteMatrix.html  NxsDistanceDatum.html  NxsDistancesBlock.html  NxsEmptyBlock.html  NxsException.html  NxsReader.html  NxsSetReader.html  NxsString.html  NxsStringEqual.html  NxsTaxaBlock.html  NxsToken.html  NxsTreesBlock.html  classes.html  contents.html  functions.html  index.html  link_topol_and_mth_index.html  v2.0index.html
html/v2.1/: doxyfile  footer.html  index.html  ncl.css
html/v2.1/funcdocs/simpleNCLClient/: Makefile  simpleNCLClient.cpp
misc/: codeEnumToAA.txt  generate_codon_recode.py  genetic_codes.py
ncl/: CMakeLists.txt  Makefile.am  basicapi.dox  doc.dox  faq.dox  meson.build  ncl.h  nxsallocatematrix.h  nxsassumptionsblock.cpp  nxsassumptionsblock.h  nxsblock.cpp  nxsblock.h  nxscharactersblock.cpp  nxscharactersblock.h  nxscxxdiscretematrix.cpp  nxscxxdiscretematrix.h  nxsdatablock.cpp  nxsdatablock.h  nxsdistancesblock.cpp  nxsdistancesblock.h  nxsexception.cpp  nxsexception.h  nxsmultiformat.cpp  nxsmultiformat.h  nxspublicblocks.cpp  nxspublicblocks.h  nxsreader.cpp  nxsreader.h  nxssetreader.cpp  nxssetreader.h  nxsstring.cpp  nxsstring.h  nxstaxaassociationblock.cpp  nxstaxaassociationblock.h  nxstaxablock.cpp  nxstaxablock.h  nxstoken.cpp  nxstoken.h  nxstreesblock.cpp  nxstreesblock.h  (+5 more)
scripts/: make_winroot.sh
swig/: ncl.i
test/: Makefile.am  meson.build  roundTripNCLTest.py
test/2NexmlIn/: relaxedphyliptree_abc.tre  somebrlens.nex
test/2NexmlOut/: nexus  relaxedphyliptree_abc.tre
test/ExternalValidIn/: relaxedphyliptree_q.phy
test/ExternalValidOut/: phyliptree_simple.phy  relaxedphyliptree_q.phy
test/NTSValidIn/: associates.nex  avian_ovomucoids.nex  mbank_X1686_7-22-2023_250.nex  notaxablock-quotes.nex  parens_intree.tre
test/NTSValidOut/: associates.nex  mbank_X1686_7-22-2023_250.nex  notaxablock-quotes.nex  parens_intree.tre
test/funkyValidIn/: choke.tre
test/funkyValidOut/: choke.tre
vc7/: vc7.sln
vc7/basiccmdline/: basiccmdline.vcproj
vc7/ncl/: ncl.vcproj
vc7/ncltest/: ncltest.vcproj
vc7/normalizer/: normalizer.vcproj
xcode/ncl-xcode/: README.txt
xcode/ncl-xcode/ncl-xcode.xcodeproj/: project.pbxproj
