python_prog = find_program('python3', 'python')

test_script = meson.project_source_root() / 'test' / 'roundTripNCLTest.py'

data_dir = meson.project_source_root() / 'data'
test_data_dir = meson.project_source_root() / 'test' / 'data'
test_dir = meson.project_source_root() / 'test'

subdir('ot-subtree')
subdir('ot-tree-inspect')
subdir('polytomy-count')
subdir('splitsinfile')
subdir('find-unsupported-edges')
subdir('normalizer')
subdir('gapcode')
subdir('nclsimplest')
subdir('ncltest')
subdir('subsetter')
subdir('translate')
subdir('compressor')
subdir('basiccmdline')
subdir('phylobaseinterface')
subdir('patristic')
subdir('check-taxo-nodes')
subdir('outdeg1count')
