LDADD       = @top_builddir@/ncl/libncl.la
AM_CPPFLAGS = -I@top_srcdir@/ncl
noinst_PROGRAMS = NEXUStosplits majrule
noinst_HEADERS = splitsstructs.h
NEXUStosplits_SOURCES = splitsinfile.cpp splitsstructs.cpp
majrule_SOURCES = splitsinfile.cpp splitsstructs.cpp
NEXUStosplits_CPPFLAGS = $(AM_CPPFLAGS)
